cmake_minimum_required(VERSION 2.8)

PROJECT(ssd_test)
SET(CMAKE_CXX_STANDARD 11)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)
INCLUDE_DIRECTORIES(./include
		    /home/hy17003/TensorRT-5.1.5.0/include
		    ${CUDA_INCLUDE_DIRS}
                    )
SET(TENSORRT_LIB_PATH "/home/hy17003/TensorRT-5.1.5.0/lib")
FILE(GLOB TENSORRT_LIBS "${TENSORRT_LIB_PATH}/*.so")
AUX_SOURCE_DIRECTORY(src SRC_LIST)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} ${TENSORRT_LIBS} ${CUDA_LIBRARIES})
